# Job-Search-OS

./: .gitignore  CLAUDE.md  README.md  config.yaml  install.sh  pyproject.toml  requirements.txt
1-Profile/: README.md
2-Resume/prompts/: prompt.md  prompt_compact.md
3-Outreach/: cold_email_sequence.md  email_prompt.md
4-Company-Research/: README.md  enrich_and_score.py  scrape_seed.py  scrape_series_b.py  scrape_yc.py
5-Interview-Prep/prep/: research_template.md
5-Interview-Prep/stories/: YOUR_behavioral_stories.yaml
6-Strategy/: NEGOTIATION_PLAYBOOK.md
7-Situations/: OBJECTION_PLAYBOOK.md
jsos/: __init__.py  cli.py  config.py  scorer.py  tracker.py
jsos/templates/: PHILOSOPHY.md
jsos/templates/1-Profile/: YOUR_context.md  YOUR_resume_data_compact.md
jsos/templates/2-Resume/template/: build.sh  resume_template.tex
jsos/templates/3-Outreach/: OUTREACH_STRATEGY.md  outreach_tracker.csv  tracker_template.csv
jsos/templates/4-Company-Research/: FUNDING_STAGE_SCRAPE_PLAYBOOK.md  scrape_series_a.py
jsos/templates/5-Interview-Prep/prompts/: interview_prep_prompt.md
jsos/templates/5-Interview-Prep/stories/: behavioral_questions.md  story_prompt.md
jsos/templates/6-Strategy/: DAILY_OPS.md  PLAYBOOK.md
jsos/templates/7-Situations/: WHEN_STUCK.md
jsos/templates/skills/: negotiate-offer.md
skills/: README.md
